# mauve_sterela

./: CMakeLists.txt  README.md  package.xml
LineGuidance/: CMakeLists.txt  LineGuidance-component.cpp  LineGuidance-component.hpp
LineGuidance/reconfigure/: CMakeLists.txt  LineGuidance-service.cpp
ObstacleDetector/: CMakeLists.txt  ObstacleDetector-component.cpp  ObstacleDetector-component.hpp
ObstacleDetector/reconfigure/: CMakeLists.txt  ObstacleDetector-service.cpp
SafePilot/: CMakeLists.txt  SafePilot-component.cpp  SafePilot-component.hpp
SafePilot/reconfigure/: CMakeLists.txt  SafePilot-service.cpp
cfg/: LineGuidance.cfg  ObstacleDetector.cfg  SafePilot.cfg
env/: sterela-env.sh.in
extra/: morse.ops
include/sterela/: sterela-codels.hpp  sterela-lttng.hpp  sterela-types.hpp  sterela.hpp
launch/: ObstacleDeployment.launch
lttng/: CMakeLists.txt  lttng-codels.cpp
models/: line.mal  obstacle.mal  obstacle_architecture.mal  safepilot.mal  sterela.mal
scripts/: ObstacleDeployment.ops
src/codels/: leftObstacleDistance.cpp  limitSpeedZone1.cpp  limitSpeedZone2.cpp  min.cpp  obstacleDistance.cpp  rightObstacleDistance.cpp  staightSpeed.cpp  toDouble.cpp  toFloat32.cpp
