<package format="2">
	<name>sterela</name>
	<version>1.5.0</version>
	<license>GPL</license>
	<maintainer email="mauve@onera.fr">MAUVE team</maintainer>
	<description>MAUVE generated package for sterela</description>
	<buildtool_depend>catkin</buildtool_depend>
 <depend>mauve</depend>
 <depend>std_msgs</depend>
 <depend>geometry_msgs</depend>
 <depend>sensor_msgs</depend>
 <depend>roscpp</depend>
 <export>
  <rtt_ros>
    <plugin_depend>rtt_std_msgs</plugin_depend>
<plugin_depend>rtt_geometry_msgs</plugin_depend>
<plugin_depend>rtt_sensor_msgs</plugin_depend>
    <plugin_depend>rtt_std_msgs</plugin_depend>
  </rtt_ros>
 </export>
</package>